--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
   width: 100vw;
   overflow-x: hidden;
   position: relative;
-  height: 2000vh;
   background-color: rgba(0, 128, 0, 0.237);
   position: relative;
+  scrollbar-gutter: stable both-edges;
 }
 
 nav {
@@ -35,6 +35,14 @@ nav {
   /* background-color: rgba(0, 128, 0, 0.237); */
   position: relative;
 }
+.MainHeader img {
+  animation: imgfloating 5s infinite linear alternate;
+}
+@keyframes imgfloating {
+  100% {
+    transform: translate(10px, -50px);
+  }
+}
 .MainHeader::after,
 .MainHeader::before {
   content: "";
@@ -44,13 +52,14 @@ nav {
   border-radius: 50%;
   background-color: var(--brown);
   opacity: 0.3;
+  animation: imgfloating 5s infinite linear alternate;
 }
 .MainHeader::after {
   top: 20%;
   right: 10%;
 }
 .MainHeader::before {
-  top: 70%;
+  top: 100%;
   left: 15%;
 }
 .MainHeader img {
@@ -143,13 +152,13 @@ nav {
 }
 .AboutSection {
   max-width: 100vw;
-  padding: 0 5vw;
+  padding: 0 0vw;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.AboutSection .GreenBar {
+.GreenBar {
   position: absolute;
   left: 0;
   top: -20%;
@@ -157,7 +166,7 @@ nav {
   height: 150%;
   background-color: var(--green);
   opacity: 0.6;
-  z-index: 0;
+  z-index: -1;
   border-radius: 0 20px 20px 0;
 }
 .AboutSectionText {
@@ -171,6 +180,7 @@ nav {
 }
 .SecAboutSection {
   margin-top: 10vh;
+  overflow: hidden;
   gap: 10vw;
 }
 .SecAboutSectionText {
@@ -232,7 +242,7 @@ nav {
 }
 @media screen and (max-width: 992px) {
   .AboutSection {
-    padding: 0 5vw;
+    padding: 0 0vw;
   }
   .AboutSectionText h3 {
     font-size: 26px;
@@ -242,7 +252,7 @@ nav {
   }
   .AboutSectionText {
     max-width: 60vw;
-    padding: 10px;
+    padding-right: 6vw;
   }
   .AboutSection img {
     max-width: 200px;
@@ -250,7 +260,7 @@ nav {
 }
 @media screen and (max-width: 576px) {
   .AboutSection {
-    padding: 0 2vw;
+    padding: 0 0vw;
   }
   .AboutSectionText h3 {
     font-size: 22px;
@@ -267,7 +277,6 @@ nav {
   }
   .AboutSectionText {
     max-width: 80vw;
-    padding: 5px;
   }
   .AboutSection img {
     max-width: 100px;
@@ -291,26 +300,45 @@ nav {
 /* ContactUsPopUp */
 
 .AniPlann {
-  background: url(/imgs/planWorld.png) no-repeat right;
-  background-size: contain;
   background-color: #52876f;
   color: white;
-  animation: ani 3s infinite alternate-reverse linear;
   padding: 10px 0;
+  position: relative;
 }
 .AniPlann h5 {
   color: white;
 }
+.AniPlann::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(/imgs/planWorld.png) no-repeat right;
+  background-size: contain;
+  animation: ani 10s infinite linear;
+}
 @keyframes ani {
   0% {
-    background-position: right;
+    background-position: 130% 130%;
   }
+
   100% {
-    background-position: left;
+    background-position: -30% -30%;
   }
 }
 
 /* Tree Styling */
+.TreeSection {
+  padding: 3vw;
+}
+.TreeSection hr {
+  width: 90vw;
+  margin: auto;
+  height: 5px;
+  background-color: #064b37;
+}
 .CompanyScope {
   background-color: var(--brown);
 }
@@ -359,6 +387,7 @@ nav {
   color: #333;
   position: relative;
   top: 1px;
+  font-weight: bold;
 }
 
 .tree li a:hover,
@@ -376,4 +405,802 @@ nav {
   top: -5%;
   right: 50%;
   color: var(--brown);
+}
+
+/* Grids Styling */
+.grid-container {
+  display: grid;
+  gap: 50px;
+  padding: 0px 0;
+  width: 90vw;
+  margin: auto;
+}
+.ArticleBoxes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5vw;
+  position: relative;
+}
+/* .ArticleBoxes::before {
+  content: "";
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  top: -70%;
+  left: -10%;
+  border-radius: 50%;
+  border: 5px solid white;
+  background: url(./imgs/3d-icon-traveling-vacation.png) no-repeat center;
+  background-size: contain;
+  background-color: #8c6a2f64;
+  rotate: -30deg;
+  z-index: -1;
+} */
+.ArticleBoxeMainTitle {
+  color: var(--brown);
+  position: relative;
+  font-size: 28px;
+}
+.ArticleBoxeMainTitle::before,
+.ArticleBoxeMainTitle::after {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background-color: black;
+  opacity: 0.3;
+}
+.ArticleBoxeMainTitle::before {
+  width: 75%;
+  bottom: -15px;
+  right: calc(50% - 50%);
+}
+.ArticleBoxeMainTitle::after {
+  width: 100%;
+  bottom: -5px;
+  right: calc(50% - 50%);
+}
+.grid-item {
+  text-align: center;
+  padding: 20px;
+  font-size: 18px;
+  position: relative;
+  border: 3px solid var(--brown);
+  color: var(--green);
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.item1 {
+  grid-column: 1 / span 2;
+  grid-row: 1;
+  position: relative;
+}
+
+.grid-item::before {
+  position: absolute;
+  color: white;
+  top: calc(0% - 25px);
+  font-size: 24px;
+  background-color: var(--green);
+  padding: 0px 10px;
+  border-radius: 50%;
+  border: 2px solid white;
+  z-index: 4;
+}
+.grid-item::after {
+  width: 150px;
+  margin: auto;
+  position: absolute;
+  top: calc(0% - 25px);
+  left: calc(75% - 75px);
+  font-size: 24px;
+  color: white;
+  background-color: var(--brown);
+  border-radius: 10px 0 0 10px;
+}
+.item1::before {
+  content: "1";
+  left: calc(75% + 60px);
+}
+.item1::after {
+  content: " الاحترافية :";
+  left: calc(75% - 75px);
+}
+.item2 {
+  grid-column: 3;
+  grid-row: 1 / span 1;
+}
+.item5 {
+  grid-column: 3;
+  grid-row: 2 / span 1;
+}
+.item2::before {
+  content: "2";
+  left: calc(75% - 20px);
+}
+.item2::after {
+  content: "الابتكار :";
+  left: calc(75% - 150px);
+}
+.item3::before {
+  content: "3";
+  left: calc(75% - 0px);
+}
+.item3::after {
+  content: "التفاني :";
+  left: calc(75% - 130px);
+}
+.item4::before {
+  content: "4";
+  left: calc(75% - 0px);
+}
+.item4::after {
+  content: "الاحترام :";
+  left: calc(75% - 130px);
+}
+.item5::before {
+  content: "5";
+  left: calc(75% - 20px);
+}
+.item5::after {
+  content: "الشراكة :";
+  left: calc(75% - 150px);
+}
+@media screen and (max-width: 768px) {
+  .grid-item {
+    font-size: smaller;
+  }
+  .grid-item::after,
+  .grid-item::before {
+    font-size: smaller;
+    top: -15px;
+    left: 75%;
+  }
+  .grid-item::after {
+    right: 22%;
+    width: 100px;
+  }
+  .item1 {
+    grid-row: 1;
+    grid-column: 1 / span 3;
+    margin-top: 40px;
+  }
+  .item2 {
+    grid-column: 1 / span 3;
+    grid-row: 2;
+  }
+  .item3 {
+    grid-column: 1 / span 1;
+    grid-row: 3;
+  }
+  .item4 {
+    grid-column: 2 / span 2;
+    grid-row: 3;
+  }
+  .item5 {
+    grid-column: 1 / span 3;
+    grid-row: 4;
+  }
+}
+/* .item5 {
+  grid-column: 1 / span 3;
+  grid-row: 3;
+} */
+
+/* ُEnterPrice Activities */
+.MainAticSec {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.MainAticSec .GreenBar {
+  height: 110%;
+  top: 00%;
+  right: 0;
+  border-radius: 15px 0 0 15px;
+}
+.EnImgDiv {
+  position: relative;
+  width: fit-content;
+  margin: 5vh calc(50vw + 100px) 0vh 0;
+}
+.EnImgDivImg {
+  max-width: 15vw;
+  position: relative;
+}
+.EnImgDiv::after {
+  content: "نشاطات الشركة ";
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+  font-weight: bold;
+  color: #fff;
+  height: 40px;
+  width: 200px;
+  top: calc(50% - 40px);
+  z-index: 5;
+  right: calc(0% - 245px);
+  --r: 0.8em; /* control the cutout */
+  border-block: 0.5em solid #0000;
+  padding-inline: 0.5em calc(var(--r) + 0.25em);
+  clip-path: polygon(
+    100% 0,
+    0 0,
+    0 100%,
+    100% 100%,
+    100% calc(100% - 0.25em),
+    calc(100% - var(--r)) 50%,
+    100% 0.25em
+  );
+  background-color: var(--brown); /* the color  */
+  text-shadow: 2px 2px 8px black;
+}
+
+.EnterPriceActivities {
+  display: grid;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+}
+.EnAct {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  margin: auto;
+  position: relative;
+  color: white;
+  font-size: 14px;
+  text-wrap: pretty;
+}
+.EnAct span {
+  font-weight: bold;
+  font-size: 16px;
+}
+.EnAct::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  rotate: 45deg;
+  border-radius: 15px;
+}
+.Activ1 {
+  grid-row: 1;
+  grid-column: 2 / span 1;
+}
+.Activ1::after {
+  background-color: var(--green);
+}
+.Activ2 {
+  grid-row: 2;
+  grid-column: 1 / span 1;
+}
+.Activ2::after {
+  background-color: var(--brown);
+}
+.Activ3 {
+  grid-row: 1;
+  grid-column: 4 / span 1;
+  position: relative;
+}
+.Activ3::after {
+  background-color: var(--brown);
+}
+.Activ4 {
+  grid-row: 2;
+  grid-column: 3 / span 1;
+}
+.Activ4::after {
+  background-color: var(--green);
+}
+
+.Activ5 {
+  grid-row: 2;
+  grid-column: 5 / span 1;
+}
+.Activ5::after {
+  background-color: var(--green);
+}
+@media screen and (min-width: 768px) {
+  .EnAct::after {
+    border-right: 10px solid rgba(255, 255, 255, 0.51);
+  }
+  .Activ1 {
+    transform: translate(-40px, 30px);
+  }
+  .Activ2 {
+    transform: translate(-80px, 0px);
+  }
+  .Activ3 {
+    transform: translate(40px, 30px);
+  }
+  .Activ5 {
+    transform: translate(80px, 0px);
+  }
+}
+@media screen and (max-width: 768px) {
+  .EnterPriceActivities {
+    gap: 10px;
+  }
+
+  .EnAct::after {
+    rotate: 0deg;
+    border-radius: 15px;
+  }
+  .Activ1 {
+    grid-row: 1;
+    grid-column: 1 / span 1;
+  }
+  .Activ2 {
+    grid-row: 1;
+    grid-column: 2 / span 1;
+  }
+  .Activ3 {
+    grid-row: 2;
+    grid-column: 1 / span 1;
+  }
+  .Activ4 {
+    grid-row: 2;
+    grid-column: 2 / span 1;
+  }
+  .Activ5 {
+    grid-row: 1 / 3;
+    grid-column: 3;
+    height: calc(100%);
+  }
+}
+@media screen and (max-width: 567px) {
+  .EnAct::after {
+    border-radius: 15px;
+  }
+  .Activ5 {
+    grid-row: 3;
+    grid-column: 1 / 3;
+    width: 100%;
+    padding: 20px 0;
+  }
+}
+
+/* Start TwoInOneSection Styling */
+.TwoInONeSection {
+  margin: 20vh auto auto;
+  display: grid;
+  text-align: center;
+  width: 100vw;
+  gap: 0.5vw;
+}
+.RightSe {
+  grid-row: 1;
+  grid-column: 1 / span 3;
+  border-left: 5px solid rgba(255, 255, 255, 0.31);
+}
+.LeftSe {
+  grid-row: 1;
+  grid-column: 4 / span 4;
+  border-right: 5px solid rgba(255, 255, 255, 0.31);
+}
+
+.TwoInONeDiv h2 {
+  position: relative;
+  min-height: 10vh;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  margin: auto;
+  margin-bottom: 5vh;
+  font-size: 22px;
+  color: var(--brown);
+  text-wrap: balance;
+}
+.TwoInONeDiv h4 {
+  margin: auto;
+  font-size: 16px;
+  color: var(--green);
+}
+.LeftSe h4 {
+  width: 50%;
+}
+.RightSe h4 {
+  width: 70%;
+}
+@media screen and (max-width: 768px) {
+  .TwoInONeDiv h2 {
+    font-size: 14px;
+  }
+  .TwoInONeDiv h4 {
+    font-size: 12px;
+  }
+  .LeftSe h4 {
+    width: 80%;
+  }
+  .RightSe h4 {
+    width: 90%;
+  }
+}
+.TwoInONeDiv h2::before,
+.TwoInONeDiv h2::after {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background-color: black;
+  opacity: 0.3;
+}
+.TwoInONeDiv h2::before {
+  width: 50%;
+  bottom: -15px;
+  right: calc(50% - 25%);
+}
+.TwoInONeDiv h2::after {
+  width: 100%;
+  bottom: -5px;
+  right: calc(50% - 50%);
+}
+
+/* Heg Section */
+.HegSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 90vw;
+  margin: 5vh auto 0;
+  position: relative;
+  border: 5px solid #52876f1e;
+  border-radius: 20px;
+}
+.HegSection::before {
+  content: "";
+  position: absolute;
+  width: 20vw; /* adjust to control the size */
+  height: 20vw;
+  left: -10vw;
+  top: -10vw;
+  z-index: -1;
+  background-color: rgba(255, 255, 255, 0.5);
+  aspect-ratio: 1;
+  clip-path: polygon(
+    100% 50%,
+    79.49% 55.51%,
+    96.62% 68.06%,
+    75.51% 65.79%,
+    86.95% 83.68%,
+    68.08% 73.94%,
+    72.29% 94.76%,
+    58.21% 78.85%,
+    54.61% 99.79%,
+    47.23% 79.87%,
+    36.32% 98.09%,
+    36.63% 76.85%,
+    19.87% 89.9%,
+    27.83% 70.21%,
+    7.49% 76.32%,
+    22.03% 60.84%,
+    0.85% 59.19%,
+    20% 50%,
+    0.85% 40.81%,
+    22.03% 39.16%,
+    7.49% 23.68%,
+    27.83% 29.79%,
+    19.87% 10.1%,
+    36.63% 23.15%,
+    36.32% 1.91%,
+    47.23% 20.13%,
+    54.61% 0.21%,
+    58.21% 21.15%,
+    72.29% 5.24%,
+    68.08% 26.06%,
+    86.95% 16.32%,
+    75.51% 34.21%,
+    96.62% 31.94%,
+    79.49% 44.49%,
+    100% 50%,
+    79.49% 55.51%,
+    calc(79.49% - 5.9px) calc(55.51% - 1.1px),
+    calc(100% - 10px) calc(50% - 0px),
+    calc(79.49% - 5.9px) calc(44.49% - -1.1px),
+    calc(96.62% - 9.32px) calc(31.94% - -3.61px),
+    calc(75.51% - 5.1px) calc(34.21% - -3.16px),
+    calc(86.95% - 7.39px) calc(16.32% - -6.74px),
+    calc(68.08% - 3.62px) calc(26.06% - -4.79px),
+    calc(72.29% - 4.46px) calc(5.24% - -8.95px),
+    calc(58.21% - 1.64px) calc(21.15% - -5.77px),
+    calc(54.61% - 0.92px) calc(0.21% - -9.96px),
+    calc(47.23% - -0.55px) calc(20.13% - -5.97px),
+    calc(36.32% - -2.74px) calc(1.91% - -9.62px),
+    calc(36.63% - -2.67px) calc(23.15% - -5.37px),
+    calc(19.87% - -6.03px) calc(10.1% - -7.98px),
+    calc(27.83% - -4.43px) calc(29.79% - -4.04px),
+    calc(7.49% - -8.5px) calc(23.68% - -5.26px),
+    calc(22.03% - -5.59px) calc(39.16% - -2.17px),
+    calc(0.85% - -9.83px) calc(40.81% - -1.84px),
+    calc(20% - -6px) calc(50% - 0px),
+    calc(0.85% - -9.83px) calc(59.19% - 1.84px),
+    calc(22.03% - -5.59px) calc(60.84% - 2.17px),
+    calc(7.49% - -8.5px) calc(76.32% - 5.26px),
+    calc(27.83% - -4.43px) calc(70.21% - 4.04px),
+    calc(19.87% - -6.03px) calc(89.9% - 7.98px),
+    calc(36.63% - -2.67px) calc(76.85% - 5.37px),
+    calc(36.32% - -2.74px) calc(98.09% - 9.62px),
+    calc(47.23% - -0.55px) calc(79.87% - 5.97px),
+    calc(54.61% - 0.92px) calc(99.79% - 9.96px),
+    calc(58.21% - 1.64px) calc(78.85% - 5.77px),
+    calc(72.29% - 4.46px) calc(94.76% - 8.95px),
+    calc(68.08% - 3.62px) calc(73.94% - 4.79px),
+    calc(86.95% - 7.39px) calc(83.68% - 6.74px),
+    calc(75.51% - 5.1px) calc(65.79% - 3.16px),
+    calc(96.62% - 9.32px) calc(68.06% - 3.61px),
+    calc(79.49% - 5.9px) calc(55.51% - 1.1px),
+    calc(100% - 10px) calc(50% - 0px)
+  );
+}
+.HegTextSection2 {
+  text-align: center;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+
+  text-align: start;
+  gap: 2vh;
+  width: 50%;
+}
+
+.HegImgSection2 {
+  width: 40%;
+  text-align: center;
+}
+.HegImgSection2 img {
+  width: 100%;
+}
+.HegTextSection2 h2 {
+  color: white;
+  background-color: var(--brown);
+  width: fit-content;
+  padding: 2px 20px;
+  border-radius: 15px;
+  border: 3px solid rgba(255, 255, 255, 0.852);
+  font-size: 24px;
+  position: relative;
+}
+.HegTextSection h2::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 10vh;
+  top: -15px;
+  left: -20px;
+  z-index: 999;
+  background: url(./imgs/helal.png) no-repeat center;
+  background-size: cover;
+  animation: Helalhoweha 3s infinite linear alternate;
+  -webkit-transform-origin: 50% 0%;
+}
+@keyframes Helalhoweha {
+  0% {
+    rotate: 40deg;
+  }
+
+  100% {
+    rotate: -10deg;
+  }
+}
+.HegTextSection2 h4 {
+  color: var(--green);
+  font-size: 18px;
+  text-wrap: pretty;
+}
+@media screen and (max-width: 768px) {
+  .HegTextSection2 h2 {
+    font-size: 18px;
+  }
+  .HegTextSection2 h4 {
+    color: var(--green);
+    font-size: 12px;
+  }
+  .HegImgSection2 img {
+    max-width: 300px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .HegTextSection2 h2 {
+    font-size: 16px;
+    padding: 0 10px;
+  }
+  .HegTextSection2 h4 {
+    color: var(--green);
+    font-size: 10px;
+  }
+  .HegImgSection2 img {
+    max-width: 150px;
+  }
+}
+
+/* ColapMainSec Styling*/
+.ColapMainSec {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  width: 90vw;
+  position: relative;
+  margin: auto;
+  margin-top: 10vh;
+  padding-bottom: 10vh;
+  border-bottom: 20px solid var(--green);
+  border-left: 30px solid var(--green);
+  border-radius: 150px;
+}
+@media screen and (max-width: 767px) {
+  .ColapMainSec {
+    border-left: none;
+  }
+}
+.ColapMainDiv::before {
+  content: "";
+  position: absolute;
+  left: 3%;
+  bottom: 20%;
+  background-color: var(--green);
+  opacity: 0.3;
+  width: 20px; /* adjust to control the size */
+  aspect-ratio: 1;
+  clip-path: polygon(
+    100% 50%,
+    75.98% 65%,
+    75% 93.3%,
+    50% 80%,
+    25% 93.3%,
+    24.02% 65%,
+    0% 50%,
+    24.02% 35%,
+    25% 6.7%,
+    50% 20%,
+    75% 6.7%,
+    75.98% 35%
+  );
+}
+.ColapMainDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5vh;
+  width: 70vw;
+}
+.ColapMainDiv h2 {
+  position: relative;
+  color: var(--brown);
+  font-size: 22px;
+}
+.ColapMainDiv h4 {
+  position: relative;
+  color: var(--green);
+  width: 80%;
+}
+.ColapMainDiv h2::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 5px;
+  background-color: var(--green);
+  bottom: calc(-10% + 2.5px);
+  right: 0%;
+  transition: 1s;
+}
+.ColapMainDiv h2:hover::after {
+  width: 110%;
+}
+.ColapMainDiv h2::before {
+  content: "";
+  --r: 15px; /* border radius */
+  position: absolute;
+  width: 150px;
+  top: -50px;
+  right: -100px;
+  aspect-ratio: 1;
+  border-bottom-right-radius: var(--r);
+  clip-path: polygon(100% 0, 0 100%, 100% 100%);
+  --_g: calc(50% * (1 + 1 / tan(22.5deg)) - var(--r) / (3 * sqrt(2) - 4));
+  --_r: calc(var(--r) / tan(22.5deg)), #000 98%, #0000 101%;
+  -webkit-mask: radial-gradient(var(--r) at bottom var(--r) left var(--_r)),
+    radial-gradient(var(--r) at right var(--r) top var(--_r)),
+    conic-gradient(
+      from 112.5deg at calc(100% - var(--_g)) calc(100% - var(--_g)),
+      #000 45deg,
+      #0000 0
+    );
+  background: var(--green);
+  scale: 0.3;
+}
+
+/* Last Section Styling */
+.LastSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90vw;
+  margin: auto;
+}
+.LastSection img {
+  width: 300px;
+  transform: scaleX(-1);
+  border-radius: 50px;
+  text-align: center;
+}
+
+/* Footer Styling */
+.FooterMainSec {
+  background-color: var(--green);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 90vw;
+  padding: 10vh 5vw;
+  margin: auto;
+  margin-top: 15vh;
+  text-align: center;
+  border-radius: 50px 50px 0 0;
+  position: relative;
+}
+.FooterMainSec::before {
+  content: "";
+  position: absolute;
+  width: 100px; /* adjust to control the size */
+  aspect-ratio: 1;
+  --g: /23.606% 23.606% radial-gradient(#000 calc(71% - 1px), #0000 71%) no-repeat;
+  mask: 100% 50% var(--g), 90.451% 79.389% var(--g), 65.451% 97.553% var(--g),
+    34.549% 97.553% var(--g), 9.549% 79.389% var(--g), 0% 50% var(--g),
+    9.549% 20.611% var(--g), 34.549% 2.447% var(--g), 65.451% 2.447% var(--g),
+    90.451% 20.611% var(--g),
+    radial-gradient(100% 100%, #000 36.327%, #0000 calc(36.327% + 1px));
+  background-color: gray;
+  opacity: 0.2;
+  z-index: 0;
+  top: 10%;
+  left: 5%;
+  animation: FootSpin 5s linear infinite;
+}
+@keyframes FootSpin {
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
+.FooterMainSec div i {
+  color: var(--brown);
+  padding: 10px;
+}
+.FooterMainSec div a {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 18px;
+  font-weight: bold;
+}
+.MainColSec {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5vh;
+}
+@media screen and (max-width: 767px) {
+  .FooterMainSec div a {
+    font-size: 10px;
+    display: flex;
+    font-weight: 500;
+    flex-direction: column;
+  }
+  .FooterMainSec div i {
+    font-size: 16px;
+  }
 }
