--- a/style.css
+++ b/style.css
@@ -7,25 +7,48 @@
   margin: 0;
   text-decoration: none;
   font-family: "Cairo", sans-serif;
+  scroll-behavior: smooth;
 }
 body {
   width: 100vw;
   overflow-x: hidden;
   position: relative;
-  background-color: rgba(0, 128, 0, 0.237);
+  /* background-color: rgba(0, 128, 0, 0.237); */
   position: relative;
   scrollbar-gutter: stable both-edges;
 }
-
+.ArrowUpFixed {
+  position: fixed;
+  left: 5vw;
+  bottom: 5vh;
+  background-color: var(--brown);
+  padding: 10px;
+  border-radius: 50%;
+  color: white;
+}
 nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  /* background-color: rgba(0, 128, 0, 0.237); */
+  position: fixed;
+  z-index: 99;
+  width: 100vw;
+  height: 20vh;
+  background-color: var(--green);
 }
 .MainNavSection img {
-  max-width: 20vw;
-  border-bottom: 5px solid var(--green);
+  max-width: 10vw;
+  border-radius: 20px;
+  background-color: white;
+}
+.NavLinks {
+  display: flex;
+  gap: 20px;
+}
+.NavLinks a {
+  color: var(--brown);
+  font-weight: bold;
+  font-size: 18px;
 }
 .MainHeader {
   display: flex;
@@ -34,15 +57,16 @@ nav {
   align-items: center;
   /* background-color: rgba(0, 128, 0, 0.237); */
   position: relative;
+  padding-top: 20vh;
 }
-.MainHeader img {
+/* .MainHeader img {
   animation: imgfloating 5s infinite linear alternate;
 }
 @keyframes imgfloating {
   100% {
     transform: translate(10px, -50px);
   }
-}
+} */
 .MainHeader::after,
 .MainHeader::before {
   content: "";
@@ -52,7 +76,7 @@ nav {
   border-radius: 50%;
   background-color: var(--brown);
   opacity: 0.3;
-  animation: imgfloating 5s infinite linear alternate;
+  /* animation: imgfloating 5s infinite linear alternate; */
 }
 .MainHeader::after {
   top: 20%;
@@ -137,22 +161,49 @@ nav {
   }
 }
 @media screen and (max-width: 576px) {
+  nav {
+    height: 10vh;
+  }
   .MainNavSection img {
-    max-width: 40vw;
+    max-width: 15vw;
   }
-  .MainHeader {
+  .NavLinks {
+    gap: 10px;
+  }
+  .NavLinks a {
+    font-size: 12px;
+  }
+  .MainHeaderText h4::before {
+    top: calc(0% + 0px) !important;
+    right: calc(0% - 30px);
+    border: 20px solid transparent;
+    border-right: 20px solid var(--green);
+  }
+  .MainHeaderText h5::after {
+    right: calc(0% - 10px);
+
+    width: 10px;
+  }
+  .MainHeaderText h5::before {
+    width: 10px;
+    left: calc(0% - 10px);
+  }
+  /* .MainHeader {
     flex-direction: column-reverse;
-  }
+  } */
   .MainHeaderText h4 {
-    font-size: 42px;
+    font-size: 18px;
   }
   .MainHeaderText h5 {
-    font-size: 18px;
+    font-size: 12px;
+  }
+  .MainHeader img {
+    max-width: 100px;
   }
 }
 .AboutSection {
   max-width: 100vw;
-  padding: 0 0vw;
+  padding: 20vh 0vw 0 0;
   position: relative;
   display: flex;
   justify-content: center;
@@ -179,7 +230,6 @@ nav {
   gap: 20px;
 }
 .SecAboutSection {
-  margin-top: 10vh;
   overflow: hidden;
   gap: 10vw;
 }
@@ -242,7 +292,7 @@ nav {
 }
 @media screen and (max-width: 992px) {
   .AboutSection {
-    padding: 0 0vw;
+    padding: 10vh 0vw 0 0;
   }
   .AboutSectionText h3 {
     font-size: 26px;
@@ -260,7 +310,7 @@ nav {
 }
 @media screen and (max-width: 576px) {
   .AboutSection {
-    padding: 0 0vw;
+    padding: 10vh 0vw 0 0;
   }
   .AboutSectionText h3 {
     font-size: 22px;
@@ -308,7 +358,7 @@ nav {
 .AniPlann h5 {
   color: white;
 }
-.AniPlann::after {
+/* .AniPlann::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -327,7 +377,7 @@ nav {
   100% {
     background-position: -30% -30%;
   }
-}
+} */
 
 /* Tree Styling */
 .TreeSection {
@@ -398,7 +448,7 @@ nav {
 }
 .spanAbsul {
   position: absolute;
-  background-color: rgb(195 225 195);
+  background-color: white;
   font-size: 16px;
   padding: 0 10px;
   font-weight: bold;
@@ -595,6 +645,7 @@ nav {
   display: flex;
   flex-direction: column;
   position: relative;
+  padding-top: 10vh;
 }
 .MainAticSec .GreenBar {
   height: 110%;
@@ -978,7 +1029,7 @@ nav {
   height: 10vh;
   top: -15px;
   left: -20px;
-  z-index: 999;
+  z-index: 9;
   background: url(./imgs/helal.webp) no-repeat center;
   background-size: cover;
   animation: Helalhoweha 3s infinite linear alternate;
@@ -1151,10 +1202,10 @@ nav {
   border-radius: 50px 50px 0 0;
   position: relative;
 }
-.FooterMainSec::before {
+/* .FooterMainSec::before {
   content: "";
   position: absolute;
-  width: 100px; /* adjust to control the size */
+  width: 100px; 
   aspect-ratio: 1;
   --g: /23.606% 23.606% radial-gradient(#000 calc(71% - 1px), #0000 71%) no-repeat;
   mask: 100% 50% var(--g), 90.451% 79.389% var(--g), 65.451% 97.553% var(--g),
@@ -1176,7 +1227,7 @@ nav {
   100% {
     rotate: 360deg;
   }
-}
+} */
 .FooterMainSec div i {
   color: var(--brown);
   padding: 10px;
