--- a/style.css
+++ b/style.css
@@ -353,6 +353,7 @@ nav {
   background-color: #52876f;
   color: white;
   padding: 10px 0;
+  margin-top: 10vh;
   position: relative;
 }
 .AniPlann h5 {
