--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ body {
   padding: 10px;
   border-radius: 50%;
   color: white;
+  cursor: pointer;
+}
+.nav-active {
+  height: 15vh;
+  background-color: var(--green);
 }
 nav {
   display: flex;
@@ -34,16 +39,23 @@ nav {
   z-index: 99;
   width: 100vw;
   height: 20vh;
-  background-color: var(--green);
+  background-color: transparent;
+  transition: 1s;
 }
+nav a {
+  display: flex;
+  cursor: pointer;
+  text-shadow: 2px 2px 18px black;
+}
+
 .MainNavSection img {
-  max-width: 10vw;
+  max-width: 8vw;
   border-radius: 20px;
   background-color: white;
 }
 .NavLinks {
   display: flex;
-  gap: 20px;
+  gap: 60px;
 }
 .NavLinks a {
   color: var(--brown);
@@ -138,7 +150,9 @@ nav {
   .MainHeaderText h4 {
     font-size: 52px;
   }
-
+  .nav-active {
+    height: 10vh;
+  }
   .MainHeaderText h4::before {
     top: calc(0% + 30px) !important;
     right: calc(0% - 30px);
